# cl

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: mod.rs  query.rs
src/commands/book/: dump.rs  edit.rs  export.rs  mod.rs  new.rs  publish.rs
src/commands/log/: edit.rs  mod.rs  new.rs
src/lib/: mod.rs
src/lib/data/: logbook.rs  logentry.rs  mod.rs
