[package]
name = "cllog"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
description = "VA3ZZA's CL amateur radio logging tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
colored = "2.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
hambands = "0.1.2"
failure = "0.1.8"